# Nuclex.OpusTranscoder.Native

./: .gitmodules  ReadMe.md  clean-all-build-outputs.cmd  clean-all-build-outputs.sh  opus-transcoder (msvc-14.2).sln  opus-transcoder.code-workspace
Nuclex.OpusTranscoder.Native/: .gitignore  CMakeLists.txt  Nuclex.Audio.Native.ref  Nuclex.OpusTranscoder.Native (msvc-14.2).vcxproj  Nuclex.OpusTranscoder.Native (msvc-14.2).vcxproj.filters  build.sh
Nuclex.OpusTranscoder.Native/Documents/: Icons.md  IterativeDeclipper.md
Nuclex.OpusTranscoder.Native/Resources/: OpusTranscoder.qrc  OpusTranscoder.rc
Nuclex.OpusTranscoder.Native/Source/: ChannelMapSceneBuilder.cpp  ChannelMapSceneBuilder.h  Config.cpp  Config.h  Main.cpp  MainWindow.cpp  MainWindow.h
Nuclex.OpusTranscoder.Native/Source/Audio/: Channel.cpp  Channel.h  ChannelLayoutTransformer.cpp  ChannelLayoutTransformer.h  ClippingDetector.cpp  ClippingDetector.h  ClippingHalfwave.cpp  ClippingHalfwave.h  HalfwaveTucker.cpp  HalfwaveTucker.h  Normalizer.cpp  Normalizer.h  OpusEncoder.cpp  OpusEncoder.h  Track.cpp  Track.h  TrackReader.cpp  TrackReader.h
Nuclex.OpusTranscoder.Native/Source/Platform/: SndFileApi.cpp  SndFileApi.h  WavPackApi.cpp  WavPackApi.h
Nuclex.OpusTranscoder.Native/Source/Services/: MetadataReader.cpp  MetadataReader.h  OpusTranscoder.cpp  OpusTranscoder.h  ServicesRoot.cpp  ServicesRoot.h  Transcoder.cpp  Transcoder.h
Nuclex.OpusTranscoder.Native/Tests/Audio/: ChannelLayoutTransformerTests.cpp  ChannelTest.cpp  ClippingDetectorTests.cpp  HalfwaveTuckerTests.cpp  TrackReaderTest.cpp
Nuclex.OpusTranscoder.Native/UserInterface/: MainWindow.ui
